feat:used lstm modal RMSE: 0.0001, R2: 0.0778

--- a/stock_price_forcasting/predict.ipynb
+++ b/stock_price_forcasting/predict.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "321f7f84",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_16059/2607806152.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "/tmp/ipykernel_16059/610616188.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
       "  df = yf.download(ticker, start=\"2024-01-01\", end=\"2024-12-10\")\n",
       "[*********************100%***********************]  1 of 1 completed"
      ]
@@ -19,6 +19,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "                 Close        High        Open         Low     Volume    return  daily_range  close_open_diff  Close_lag_1  Volume_lag_1  return_lag_1  Close_lag_2  Volume_lag_2  return_lag_2  Close_lag_3  Volume_lag_3  return_lag_3  Close_lag_4  Volume_lag_4  return_lag_4  Close_lag_5  Volume_lag_5  return_lag_5        MA_5     std_5       MA_10    std_10       MA_20    std_20     RSI_14  day_of_week  month  target_close_next\n",
+      "Date                                                                                                                                                                                                                                                                                                                                                                                                                                          \n",
+      "2024-01-31  182.851913  185.529258  185.469749  182.802345   55467800 -0.019357     2.726913        -2.617836   186.461334    55859400.0     -0.019246   190.120377    47145600.0     -0.003586   190.804550    44594000.0     -0.009013   192.539886    54822100.0     -0.001697   192.867126    53631300.0     -0.003484  190.558655  2.563928  189.674146  3.823408  186.313103  4.498436  48.877700            2      1         185.291275\n",
+      "2024-02-01  185.291275  185.380516  182.445374  182.276803   64885400  0.013341     3.103713         2.845901   182.851913    55467800.0     -0.019357   186.461334    55859400.0     -0.019246   190.120377    47145600.0     -0.003586   190.804550    44594000.0     -0.009013   192.539886    54822100.0     -0.001697  188.555612  3.882616  189.844702  3.417189  186.251625  4.538761  40.605500            3      2         184.289749\n",
+      "2024-02-02  184.289749  185.757320  178.350031  177.745152  102551700 -0.005405     8.012168         5.939718   185.291275    64885400.0      0.013341   182.851913    55467800.0     -0.019357   186.461334    55859400.0     -0.019246   190.120377    47145600.0     -0.003586   190.804550    44594000.0     -0.009013  187.105890  3.338106  189.669189  3.616164  186.381030  4.468619  47.119252            4      2         186.104370\n",
+      "2024-02-05  186.104370  187.661197  186.570426  184.279821   69668800  0.009847     3.381376        -0.466055   184.289749   102551700.0     -0.005405   185.291275    64885400.0      0.013341   182.851913    55467800.0     -0.019357   186.461334    55859400.0     -0.019246   190.120377    47145600.0     -0.003586  185.802930  2.753809  189.102985  3.990857  186.576376  4.273753  44.940089            0      2         187.710785\n",
+      "2024-02-06  187.710785  187.720696  185.291267  185.202026   43490800  0.008632     2.518669         2.419518   186.104370    69668800.0      0.009847   184.289749   102551700.0     -0.005405   185.291275    64885400.0      0.013341   182.851913    55467800.0     -0.019357   186.461334    55859400.0     -0.019246  184.999728  1.462763  188.487198  3.923736  186.898649  3.955867  49.497445            1      2         187.819855\n",
       "✅ Model loaded!\n",
       "Predictions: 216\n",
       "[185.29127502 184.28974915 186.10437012 187.71078491 187.81985474\n",
@@ -157,19 +164,6 @@
     "# -------------------------\n",
     "# 2. Basic Price Features\n",
     "# -------------------------\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# -------------------------\n",
-    "# 2. Basic Price Features\n",
-    "# -------------------------\n",
     "df['return'] = df['Close'].pct_change()\n",
     "df['daily_range'] = df['High'] - df['Low']\n",
     "df['close_open_diff'] = df['Close'] - df['Open']\n",
@@ -211,6 +205,8 @@
     "df = df.set_index('Date')\n",
     "\n",
     "\n",
+    "\n",
+    "print(df.head())\n",
     "\n",
     "\n",
     "# Drop columns that are not features\n",
